--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,8 @@ instance/
 # Sphinx documentation
 docs/_build/
 
+/locobss-text-profanity
+
 # PyBuilder
 target/
 
@@ -127,3 +129,4 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+.vscode/settings.json
